# ClearWinStart

./: .gitignore  LICENSE  README.md  README.zh-CN.md  default-config.json  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
clear_win_start/: __init__.py  __main__.py  cli.py  core.py  exceptions.py  preview.py  utils.py
examples/: config_demo.py  example-usage.py  preview_demo.py  sample-config.json
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_exceptions.py  test_new_features.py  test_utils.py
